chore: snapshot gapRegionsView and simplify SequenceIndex equality
- gapRegionsView() returns List.copyOf(gapRegions) so callers get a stable snapshot, matching the filtered overloads.
- equals/hashCode now compare the gapRegions field directly instead of allocating wrappers.
- Drop a stale comment from SequenceIndexTest.